src/index.css
:root {
	background-color: #242424;
	color: rgb(255 255 255 / 87%);
	font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
	font-weight: normal;
	font-synthesis: none;
	line-height: 1.5;
	text-rendering: optimizelegibility;
	color-scheme: light dark;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

a {
	color: #646cff;
	font-weight: 500;
	text-decoration: inherit;
}

a:hover {
	color: #535bf2;
}

body {
	display: flex;
	place-items: center;
	min-height: 100vh;
	min-width: 320px;
	margin: 0;
}

h1 {
	font-size: 3.2em;
	line-height: 1.1;
}

button {
	padding: 0.6em 1.2em;
	border: 1px solid transparent;
	border-radius: 8px;
	background-color: #1a1a1a;
	font-family: inherit;
	font-size: 1em;
	font-weight: 500;
	transition: border-color 0.25s;
	cursor: pointer;
}

button:hover {
	border-color: #646cff;
}

button:focus,
button:focus-visible {
	outline: 4px auto -webkit-focus-ring-color;
}

@media (prefers-color-scheme: light) {
	:root {
		background-color: #fff;
		color: #213547;
	}

	a:hover {
		color: #747bff;
	}

	button {
		background-color: #f9f9f9;
	}
}

